Sources/Parser/BazaarParser.swift
// Generated from BazaarParser.g4 by ANTLR 4.13.1
@preconcurrency import Antlr4

open class BazaarParser: Parser {

	internal static let _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = BazaarParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(BazaarParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, COMPONENT = 1, DATA = 2, ENUM = 3, FUNCTION = 4, TEMPLATE = 5, 
                 IMPORT = 6, IF = 7, STRING = 8, BOOL = 9, INT = 10, COMMA = 11, 
                 LCURLY = 12, RCURLY = 13, LPAREN = 14, RPAREN = 15, LBRACKET = 16, 
                 RBRACKET = 17, QUESTION = 18, DOT = 19, EQUALS = 20, SEMICOLON = 21, 
                 STRING_LITERAL = 22, IDENTIFIER = 23, WS = 24
	}

	public
	static let RULE_bzr = 0, RULE_declaration = 1, RULE_import_declaration = 2, 
            RULE_data_declaration = 3, RULE_field_list = 4, RULE_field = 5, 
            RULE_enum_declaration = 6, RULE_enum_value_list = 7, RULE_enum_value = 8, 
            RULE_component_declaration = 9, RULE_function_declaration = 10, 
            RULE_function_body = 11, RULE_statement_list = 12, RULE_statement = 13, 
            RULE_return_type = 14, RULE_template_declaration = 15, RULE_template_body = 16, 
            RULE_template_content = 17, RULE_component_instantiation = 18, 
            RULE_component_body = 19, RULE_component_content_list = 20, 
            RULE_component_content = 21, RULE_conditional_statement = 22, 
            RULE_event_handler = 23, RULE_parameter_clause = 24, RULE_parameter_list = 25, 
            RULE_parameter = 26, RULE_argument_list = 27, RULE_argument = 28, 
            RULE_expression = 29, RULE_primary_expression = 30, RULE_type_annotation = 31, 
            RULE_type_identifier = 32, RULE_string_literal = 33, RULE_identifier = 34

	public
	static let ruleNames: [String] = [
		"bzr", "declaration", "import_declaration", "data_declaration", "field_list", 
		"field", "enum_declaration", "enum_value_list", "enum_value", "component_declaration", 
		"function_declaration", "function_body", "statement_list", "statement", 
		"return_type", "template_declaration", "template_body", "template_content", 
		"component_instantiation", "component_body", "component_content_list", 
		"component_content", "conditional_statement", "event_handler", "parameter_clause", 
		"parameter_list", "parameter", "argument_list", "argument", "expression", 
		"primary_expression", "type_annotation", "type_identifier", "string_literal", 
		"identifier"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, "'component'", "'data'", "'enum'", "'function'", "'template'", "'import'", 
		"'if'", "'String'", "'Bool'", "'Int'", "','", "'{'", "'}'", "'('", "')'", 
		"'['", "']'", "'?'", "'.'", "'='", "';'"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "COMPONENT", "DATA", "ENUM", "FUNCTION", "TEMPLATE", "IMPORT", "IF", 
		"STRING", "BOOL", "INT", "COMMA", "LCURLY", "RCURLY", "LPAREN", "RPAREN", 
		"LBRACKET", "RBRACKET", "QUESTION", "DOT", "EQUALS", "SEMICOLON", "STRING_LITERAL", 
		"IDENTIFIER", "WS"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "BazaarParser.g4" }

	override open
	func getRuleNames() -> [String] { return BazaarParser.ruleNames }

	override open
	func getSerializedATN() -> [Int] { return BazaarParser._serializedATN }

	override open
	func getATN() -> ATN { return BazaarParser._ATN }


	override open
	func getVocabulary() -> Vocabulary {
	    return BazaarParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,BazaarParser._ATN,BazaarParser._decisionToDFA, BazaarParser._sharedContextCache)
	}


	public class BzrContext: ParserRuleContext {
			open
			func EOF() -> TerminalNode? {
				return getToken(BazaarParser.Tokens.EOF.rawValue, 0)
			}
			open
			func declaration() -> [DeclarationContext] {
				return getRuleContexts(DeclarationContext.self)
			}
			open
			func declaration(_ i: Int) -> DeclarationContext? {
				return getRuleContext(DeclarationContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return BazaarParser.RULE_bzr
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BazaarParserVisitor {
			    return visitor.visitBzr(self)
			}
			else if let visitor = visitor as? BazaarParserBaseVisitor {
			    return visitor.visitBzr(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func bzr() throws -> BzrContext {
		var _localctx: BzrContext
		_localctx = BzrContext(_ctx, getState())
		try enterRule(_localctx, 0, BazaarParser.RULE_bzr)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(73)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 126) != 0)) {
		 		setState(70)
		 		try declaration()


		 		setState(75)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(76)
		 	try match(BazaarParser.Tokens.EOF.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class DeclarationContext: ParserRuleContext {
			open
			func import_declaration() -> Import_declarationContext? {
				return getRuleContext(Import_declarationContext.self, 0)
			}
			open
			func data_declaration() -> Data_declarationContext? {
				return getRuleContext(Data_declarationContext.self, 0)
			}
			open
			func enum_declaration() -> Enum_declarationContext? {
				return getRuleContext(Enum_declarationContext.self, 0)
			}
			open
			func component_declaration() -> Component_declarationContext? {
				return getRuleContext(Component_declarationContext.self, 0)
			}
			open
			func function_declaration() -> Function_declarationContext? {
				return getRuleContext(Function_declarationContext.self, 0)
			}
			open
			func template_declaration() -> Template_declarationContext? {
				return getRuleContext(Template_declarationContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return BazaarParser.RULE_declaration
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BazaarParserVisitor {
			    return visitor.visitDeclaration(self)
			}
			else if let visitor = visitor as? BazaarParserBaseVisitor {
			    return visitor.visitDeclaration(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func declaration() throws -> DeclarationContext {
		var _localctx: DeclarationContext
		_localctx = DeclarationContext(_ctx, getState())
		try enterRule(_localctx, 2, BazaarParser.RULE_declaration)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(84)
		 	try _errHandler.sync(self)
		 	switch (BazaarParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .IMPORT:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(78)
		 		try import_declaration()

		 		break

		 	case .DATA:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(79)
		 		try data_declaration()

		 		break

		 	case .ENUM:
		 		try enterOuterAlt(_localctx, 3)
		 		setState(80)
		 		try enum_declaration()

		 		break

		 	case .COMPONENT:
		 		try enterOuterAlt(_localctx, 4)
		 		setState(81)
		 		try component_declaration()

		 		break

		 	case .FUNCTION:
		 		try enterOuterAlt(_localctx, 5)
		 		setState(82)
		 		try function_declaration()

		 		break

		 	case .TEMPLATE:
		 		try enterOuterAlt(_localctx, 6)
		 		setState(83)
		 		try template_declaration()

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Import_declarationContext: ParserRuleContext {
			open
			func IMPORT() -> TerminalNode? {
				return getToken(BazaarParser.Tokens.IMPORT.rawValue, 0)
			}
			open
			func identifier() -> IdentifierContext? {
				return getRuleContext(IdentifierContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return BazaarParser.RULE_import_declaration
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BazaarParserVisitor {
			    return visitor.visitImport_declaration(self)
			}
			else if let visitor = visitor as? BazaarParserBaseVisitor {
			    return visitor.visitImport_declaration(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func import_declaration() throws -> Import_declarationContext {
		var _localctx: Import_declarationContext
		_localctx = Import_declarationContext(_ctx, getState())
		try enterRule(_localctx, 4, BazaarParser.RULE_import_declaration)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(86)
		 	try match(BazaarParser.Tokens.IMPORT.rawValue)
		 	setState(87)
		 	try identifier()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Data_declarationContext: ParserRuleContext {
			open
			func DATA() -> TerminalNode? {
				return getToken(BazaarParser.Tokens.DATA.rawValue, 0)
			}
			open
			func identifier() -> IdentifierContext? {
				return getRuleContext(IdentifierContext.self, 0)
			}
			open
			func LCURLY() -> TerminalNode? {
				return getToken(BazaarParser.Tokens.LCURLY.rawValue, 0)
			}
			open
			func RCURLY() -> TerminalNode? {
				return getToken(BazaarParser.Tokens.RCURLY.rawValue, 0)
			}
			open
			func field_list() -> Field_listContext? {
				return getRuleContext(Field_listContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return BazaarParser.RULE_data_declaration
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BazaarParserVisitor {
			    return visitor.visitData_declaration(self)
			}
			else if let visitor = visitor as? BazaarParserBaseVisitor {
			    return visitor.visitData_declaration(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func data_declaration() throws -> Data_declarationContext {
		var _localctx: Data_declarationContext
		_localctx = Data_declarationContext(_ctx, getState())
		try enterRule(_localctx, 6, BazaarParser.RULE_data_declaration)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(89)
		 	try match(BazaarParser.Tokens.DATA.rawValue)
		 	setState(90)
		 	try identifier()
		 	setState(91)
		 	try match(BazaarParser.Tokens.LCURLY.rawValue)
		 	setState(93)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (_la == BazaarParser.Tokens.IDENTIFIER.rawValue) {
		 		setState(92)
		 		try field_list()

		 	}

		 	setState(95)
		 	try match(BazaarParser.Tokens.RCURLY.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Field_listContext: ParserRuleContext {
			open
			func field() -> [FieldContext] {
				return getRuleContexts(FieldContext.self)
			}
			open
			func field(_ i: Int) -> FieldContext? {
				return getRuleContext(FieldContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return BazaarParser.RULE_field_list
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BazaarParserVisitor {
			    return visitor.visitField_list(self)
			}
			else if let visitor = visitor as? BazaarParserBaseVisitor {
			    return visitor.visitField_list(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func field_list() throws -> Field_listContext {
		var _localctx: Field_listContext
		_localctx = Field_listContext(_ctx, getState())
		try enterRule(_localctx, 8, BazaarParser.RULE_field_list)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(97)
		 	try field()
		 	setState(101)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (_la == BazaarParser.Tokens.IDENTIFIER.rawValue) {
		 		setState(98)
		 		try field()


		 		setState(103)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class FieldContext: ParserRuleContext {
			open
			func identifier() -> IdentifierContext? {
				return getRuleContext(IdentifierContext.self, 0)
			}
			open
			func type_annotation() -> Type_annotationContext? {
				return getRuleContext(Type_annotationContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return BazaarParser.RULE_field
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BazaarParserVisitor {
			    return visitor.visitField(self)
			}
			else if let visitor = visitor as? BazaarParserBaseVisitor {
			    return visitor.visitField(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func field() throws -> FieldContext {
		var _localctx: FieldContext
		_localctx = FieldContext(_ctx, getState())
		try enterRule(_localctx, 10, BazaarParser.RULE_field)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(104)
		 	try identifier()
		 	setState(105)
		 	try type_annotation()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Enum_declarationContext: ParserRuleContext {
			open
			func ENUM() -> TerminalNode? {
				return getToken(BazaarParser.Tokens.ENUM.rawValue, 0)
			}
			open
			func identifier() -> IdentifierContext? {
				return getRuleContext(IdentifierContext.self, 0)
			}
			open
			func LCURLY() -> TerminalNode? {
				return getToken(BazaarParser.Tokens.LCURLY.rawValue, 0)
			}
			open
			func RCURLY() -> TerminalNode? {
				return getToken(BazaarParser.Tokens.RCURLY.rawValue, 0)
			}
			open
			func enum_value_list() -> Enum_value_listContext? {
				return getRuleContext(Enum_value_listContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return BazaarParser.RULE_enum_declaration
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BazaarParserVisitor {
			    return visitor.visitEnum_declaration(self)
			}
			else if let visitor = visitor as? BazaarParserBaseVisitor {
			    return visitor.visitEnum_declaration(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func enum_declaration() throws -> Enum_declarationContext {
		var _localctx: Enum_declarationContext
		_localctx = Enum_declarationContext(_ctx, getState())
		try enterRule(_localctx, 12, BazaarParser.RULE_enum_declaration)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(107)
		 	try match(BazaarParser.Tokens.ENUM.rawValue)
		 	setState(108)
		 	try identifier()
		 	setState(109)
		 	try match(BazaarParser.Tokens.LCURLY.rawValue)
		 	setState(111)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (_la == BazaarParser.Tokens.IDENTIFIER.rawValue) {
		 		setState(110)
		 		try enum_value_list()

		 	}

		 	setState(113)
		 	try match(BazaarParser.Tokens.RCURLY.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Enum_value_listContext: ParserRuleContext {
			open
			func enum_value() -> [Enum_valueContext] {
				return getRuleContexts(Enum_valueContext.self)
			}
			open
			func enum_value(_ i: Int) -> Enum_valueContext? {
				return getRuleContext(Enum_valueContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return BazaarParser.RULE_enum_value_list
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BazaarParserVisitor {
			    return visitor.visitEnum_value_list(self)
			}
			else if let visitor = visitor as? BazaarParserBaseVisitor {
			    return visitor.visitEnum_value_list(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func enum_value_list() throws -> Enum_value_listContext {
		var _localctx: Enum_value_listContext
		_localctx = Enum_value_listContext(_ctx, getState())
		try enterRule(_localctx, 14, BazaarParser.RULE_enum_value_list)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(115)
		 	try enum_value()
		 	setState(119)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (_la == BazaarParser.Tokens.IDENTIFIER.rawValue) {
		 		setState(116)
		 		try enum_value()


		 		setState(121)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Enum_valueContext: ParserRuleContext {
			open
			func identifier() -> IdentifierContext? {
				return getRuleContext(IdentifierContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return BazaarParser.RULE_enum_value
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BazaarParserVisitor {
			    return visitor.visitEnum_value(self)
			}
			else if let visitor = visitor as? BazaarParserBaseVisitor {
			    return visitor.visitEnum_value(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func enum_value() throws -> Enum_valueContext {
		var _localctx: Enum_valueContext
		_localctx = Enum_valueContext(_ctx, getState())
		try enterRule(_localctx, 16, BazaarParser.RULE_enum_value)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(122)
		 	try identifier()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Component_declarationContext: ParserRuleContext {
			open
			func COMPONENT() -> TerminalNode? {
				return getToken(BazaarParser.Tokens.COMPONENT.rawValue, 0)
			}
			open
			func identifier() -> IdentifierContext? {
				return getRuleContext(IdentifierContext.self, 0)
			}
			open
			func LCURLY() -> TerminalNode? {
				return getToken(BazaarParser.Tokens.LCURLY.rawValue, 0)
			}
			open
			func RCURLY() -> TerminalNode? {
				return getToken(BazaarParser.Tokens.RCURLY.rawValue, 0)
			}
			open
			func field_list() -> Field_listContext? {
				return getRuleContext(Field_listContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return BazaarParser.RULE_component_declaration
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BazaarParserVisitor {
			    return visitor.visitComponent_declaration(self)
			}
			else if let visitor = visitor as? BazaarParserBaseVisitor {
			    return visitor.visitComponent_declaration(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func component_declaration() throws -> Component_declarationContext {
		var _localctx: Component_declarationContext
		_localctx = Component_declarationContext(_ctx, getState())
		try enterRule(_localctx, 18, BazaarParser.RULE_component_declaration)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(124)
		 	try match(BazaarParser.Tokens.COMPONENT.rawValue)
		 	setState(125)
		 	try identifier()
		 	setState(126)
		 	try match(BazaarParser.Tokens.LCURLY.rawValue)
		 	setState(128)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (_la == BazaarParser.Tokens.IDENTIFIER.rawValue) {
		 		setState(127)
		 		try field_list()

		 	}

		 	setState(130)
		 	try match(BazaarParser.Tokens.RCURLY.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Function_declarationContext: ParserRuleContext {
			open
			func FUNCTION() -> TerminalNode? {
				return getToken(BazaarParser.Tokens.FUNCTION.rawValue, 0)
			}
			open
			func identifier() -> IdentifierContext? {
				return getRuleContext(IdentifierContext.self, 0)
			}
			open
			func parameter_clause() -> Parameter_clauseContext? {
				return getRuleContext(Parameter_clauseContext.self, 0)
			}
			open
			func return_type() -> Return_typeContext? {
				return getRuleContext(Return_typeContext.self, 0)
			}
			open
			func function_body() -> Function_bodyContext? {
				return getRuleContext(Function_bodyContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return BazaarParser.RULE_function_declaration
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BazaarParserVisitor {
			    return visitor.visitFunction_declaration(self)
			}
			else if let visitor = visitor as? BazaarParserBaseVisitor {
			    return visitor.visitFunction_declaration(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func function_declaration() throws -> Function_declarationContext {
		var _localctx: Function_declarationContext
		_localctx = Function_declarationContext(_ctx, getState())
		try enterRule(_localctx, 20, BazaarParser.RULE_function_declaration)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(132)
		 	try match(BazaarParser.Tokens.FUNCTION.rawValue)
		 	setState(133)
		 	try identifier()
		 	setState(134)
		 	try parameter_clause()
		 	setState(136)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 8390400) != 0)) {
		 		setState(135)
		 		try return_type()

		 	}

		 	setState(139)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (_la == BazaarParser.Tokens.LCURLY.rawValue) {
		 		setState(138)
		 		try function_body()

		 	}


		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Function_bodyContext: ParserRuleContext {
			open
			func LCURLY() -> TerminalNode? {
				return getToken(BazaarParser.Tokens.LCURLY.rawValue, 0)
			}
			open
			func RCURLY() -> TerminalNode? {
				return getToken(BazaarParser.Tokens.RCURLY.rawValue, 0)
			}
			open
			func statement_list() -> Statement_listContext? {
				return getRuleContext(Statement_listContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return BazaarParser.RULE_function_body
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BazaarParserVisitor {
			    return visitor.visitFunction_body(self)
			}
			else if let visitor = visitor as? BazaarParserBaseVisitor {
			    return visitor.visitFunction_body(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func function_body() throws -> Function_bodyContext {
		var _localctx: Function_bodyContext
		_localctx = Function_bodyContext(_ctx, getState())
		try enterRule(_localctx, 22, BazaarParser.RULE_function_body)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(141)
		 	try match(BazaarParser.Tokens.LCURLY.rawValue)
		 	setState(143)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 13107200) != 0)) {
		 		setState(142)
		 		try statement_list()

		 	}

		 	setState(145)
		 	try match(BazaarParser.Tokens.RCURLY.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Statement_listContext: ParserRuleContext {
			open
			func statement() -> [StatementContext] {
				return getRuleContexts(StatementContext.self)
			}
			open
			func statement(_ i: Int) -> StatementContext? {
				return getRuleContext(StatementContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return BazaarParser.RULE_statement_list
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BazaarParserVisitor {
			    return visitor.visitStatement_list(self)
			}
			else if let visitor = visitor as? BazaarParserBaseVisitor {
			    return visitor.visitStatement_list(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func statement_list() throws -> Statement_listContext {
		var _localctx: Statement_listContext
		_localctx = Statement_listContext(_ctx, getState())
		try enterRule(_localctx, 24, BazaarParser.RULE_statement_list)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(147)
		 	try statement()
		 	setState(151)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 13107200) != 0)) {
		 		setState(148)
		 		try statement()


		 		setState(153)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class StatementContext: ParserRuleContext {
			open
			func expression() -> ExpressionContext? {
				return getRuleContext(ExpressionContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return BazaarParser.RULE_statement
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BazaarParserVisitor {
			    return visitor.visitStatement(self)
			}
			else if let visitor = visitor as? BazaarParserBaseVisitor {
			    return visitor.visitStatement(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func statement() throws -> StatementContext {
		var _localctx: StatementContext
		_localctx = StatementContext(_ctx, getState())
		try enterRule(_localctx, 26, BazaarParser.RULE_statement)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(154)
		 	try expression()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Return_typeContext: ParserRuleContext {
			open
			func type_annotation() -> Type_annotationContext? {
				return getRuleContext(Type_annotationContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return BazaarParser.RULE_return_type
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? BazaarParserVisitor {
			    return visitor.visitReturn_type(self)
			}
			else if let visitor = visitor as? BazaarParserBaseVisitor {
			    return visitor.visitReturn_type(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func return_type() throws -> Return_typeContext {
		var _localctx: Return_typeContext
		_localctx = Return_typeContext(_ctx, getState())
		try enterRule(_localctx, 28, BazaarParser.RULE_return_type)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(156)
		 	try type_annotation()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}
